--- a/0000.md
+++ b/0000.md
@@ -23,5 +23,5 @@ Date:    2019-07-18
 * 保质期限:720天
 * 联系方式:186-8120-8964(微信同号)
 * 电子邮箱:sales@multifloralhoney.com
-* 官方网站:[https://mi.chun.pro/](https://mi.chun.pro/)、[https://zhongfengmi.com/](https://zhongfengmi.com/)、[https://multifloralhoney.com/](https://multifloralhoney.com/)
+* 官方网站:[https://mi.chun.pro/](https://mi.chun.pro/)、[https://multifloralhoney.com/](https://multifloralhoney.com/)
 
